--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
   	<servlet-name>UpdateServlet</servlet-name>
   	<display-name>UpdateServlet</display-name>
   	<description></description>
-  	<servlet-class>com.entities.UpdateServlet</servlet-class>
+  	<servlet-class>com.servlets.UpdateServlets</servlet-class>
   </servlet>
   <servlet-mapping>
   	<servlet-name>SaveNoteServlet</servlet-name>
